--- a/BionicProject/.settings/org.eclipse.core.resources.prefs
+++ b/BionicProject/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/hometasks/DatesTask.java=UTF-8
+encoding//src/misc/DaysLived.java=UTF-8
 encoding/<project>=UTF-8
